# beginning-cpp20

./: .gitmodules  LICENSE.txt  README.md  errata.md
Exercises/: CMakeLists.txt  README.md  clang.sh  gcc.sh
Exercises/Modules/Chapter 01/: Exer1_03.cpp  Soln1_01.cpp  Soln1_02.cpp
Exercises/Modules/Chapter 02/: Soln2_01A.cpp  Soln2_01B.cpp  Soln2_02A.cpp  Soln2_02B.cpp  Soln2_03.cpp  Soln2_04.cpp  Soln2_05.cpp  Soln2_06.cpp  Soln2_07.cpp  Soln2_08.cpp
Exercises/Modules/Chapter 03/: Soln3_01.cpp  Soln3_02.cpp  Soln3_03.cpp  Soln3_04.cpp  Soln3_05.cpp  Soln3_06.cpp
Exercises/Modules/Chapter 04/: Soln4_01.cpp  Soln4_02.cpp  Soln4_03.cpp  Soln4_04.cpp  Soln4_05.cpp  Soln4_06.cpp  Soln4_07.cpp  Soln4_08.cpp
Exercises/Modules/Chapter 05/: Soln5_01.cpp  Soln5_02.cpp  Soln5_03.cpp  Soln5_04.cpp  Soln5_05.cpp  Soln5_06.cpp  Soln5_07.cpp  Soln5_08.cpp
Exercises/Modules/Chapter 06/: Soln6_01.cpp  Soln6_02.cpp  Soln6_03.cpp  Soln6_04.cpp  Soln6_05.cpp  Soln6_06.cpp
Exercises/Modules/Chapter 07/: Soln7_01.cpp  Soln7_02.cpp  Soln7_03.cpp  Soln7_04.cpp  Soln7_05.cpp  Soln7_06.cpp  Soln7_07.cpp  Soln7_08.cpp  Soln7_08A.cpp  Soln7_09.cpp  Soln7_09A.cpp
Exercises/Modules/Chapter 08/: Soln8_01.cpp  Soln8_02.cpp  Soln8_03.cpp  Soln8_04.cpp  Soln8_05.cpp  Soln8_06.cpp  Soln8_07.cpp  Soln8_07A.cpp  Soln8_08.cpp  Soln8_09.cpp
Exercises/Modules/Chapter 09/: Soln9_01.cpp  Soln9_02.cpp  Soln9_03.cpp  Soln9_04.cpp  Soln9_05.cpp  Soln9_06.cpp
Exercises/Modules/Chapter 10/: Soln10_01.cpp  Soln10_02.cpp  Soln10_03.cpp  Soln10_04.cpp  Soln10_05.cpp  Soln10_06.cpp
(+1235 files in other folders)
